# temoto_resource_registrar

./: .gitignore  CMakeLists.txt  README.md  package.xml  package.xml.old  readme.md
.github/workflows/: cmake.yml
action/: RequestResource.action
actionLib_test_ws/actionlib_tutorials/: CMakeLists.txt  package.xml
actionLib_test_ws/actionlib_tutorials/action/: Resource2.action
actionLib_test_ws/actionlib_tutorials/src/: RRServerBased.cpp  ResourceConsumer.cpp  ResourceProducer.cpp  ResourceRegistrar.cpp  resource_server.cpp
catkin_ws/src/ros_temoto_registrar/: CMakeLists.txt  package.xml
catkin_ws/src/ros_temoto_registrar/src/: rr_wrapper.cpp
include/rr/: message_serializer.h  query_utils.h  ros1_client.h  ros1_query.h  ros1_resource_registrar.h  ros1_server.h  ros2_client.h  ros2_query.h  ros2_resource_registrar.h  ros2_server.h
include/temoto_resource_registrar/: rr_base.h  rr_client_base.h  rr_query_base.h  rr_registry.h
msg/: TemotoMetadata.msg  TemotoRequestMetadata.msg  TemotoResponseMetadata.msg
rr_core/: CMakeLists.txt  README.md  doxygen.conf
rr_core/include/temoto_resource_registrar/: rr_base.h  rr_base_message_type.h  rr_catalog.h  rr_client_base.h  rr_configuration.h  rr_connection_registry.h  rr_exceptions.h  rr_id_utils.h  rr_identifiable.h  rr_message_registry.h  rr_query_base.h  rr_query_container.h  rr_query_interpreter.h  rr_query_request.h  rr_query_response.h  rr_registry.h  rr_resource.h  rr_serializable.h  rr_serializer.h  rr_server_base.h  rr_status.h  string_formatting.h  temoto_distributed_tracing.h  temoto_error.h  temoto_logging.h
rr_core/src/: rr_base.cpp  rr_catalog.cpp  rr_client_base.cpp  rr_connection_registry.cpp  rr_message_registry.cpp  rr_registry.cpp  rr_server_base.cpp  rr_test.cpp  temoto_logging.cpp
rr_core/test/: main.cpp  rr_test.cpp
rr_interfaces/: CMakeLists.txt  package.xml
rr_interfaces/msg/: TemotoRequestMetadata.msg
rr_interfaces/srv/: DataFetchComponent.srv
src/: ResourceAgent.cpp  ResourceConsumer.cpp  ResourceProducer.cpp  rr_server_derivate.cpp  rr_test.cpp  rr_wrapper.cpp
src/rr/: Ros1Client.cpp  Ros1ResourceRegistrar.cpp  Ros1Server.cpp  ros1_client.cpp  ros1_resource_registrar.cpp  ros1_server.cpp
srv/: CounterService.srv  DataFetchComponent.srv  LoadComponent.srv  StatusComponent.srv  UnloadComponent.srv
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/msg/: TemotoResponseMetadata.msg
tutorial_interfaces/srv/: StatusComponent.srv
